Remove unnecessary baseUri argument; resolve deprecation issue